home-prod/photoprism-bat/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: photosbat-authz
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway 
  action: DENY
  rules:
  - from:
    - source:
        notIpBlocks: ["192.168.10.0/24","10.0.0.0/8"]
    to:
    - operation:
        hosts: ["photosbat.thingsgreener.com"]
